<resources>
    <string name="app_name">Count Up</string>
    <string name="home">Home</string>
    <string name="calender">Calender</string>
    <string name="chart">Chart</string>
    <string name="setting">Setting</string>
    <string name="select_exercise">Select Exercise</string>
    <string name="ranking">Ranking</string>
    <string name="services_preparing">Services Preparing</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="exercise_push_up">Push up</string>
    <string name="exercise_squat">Squat</string>
    <string name="exercise_chin_up">Chin up / Pull up</string>
    <string name="exercise_sit_up">Sit up</string>
    <string name="exercise_plank">Plank</string>

    <string name="exercise_desc_push_up">1. Take a push-up position.\n2. Put your cell phone between your arms.\n3. Put your cell phone front your chest.\n\n* Count when the distance between the cell phone and the chest is less than 5cm.</string>
    <string name="exercise_desc_squat">스쿼트 설명입니다스쿼트 설명입니다스쿼트 설명입니다스쿼트 설명입니다스쿼트 설명입니다스쿼트 설명입니다스쿼트 설명입니다스쿼트 설명입니다스쿼트 설명입니다</string>
    <string name="exercise_desc_chin_up">턱걸이 설명입니다.턱걸이 설명입니다.턱걸이 설명입니다.턱걸이 설명입니다.턱걸이 설명입니다.턱걸이 설명입니다.턱걸이 설명입니다.턱걸이 설명입니다.</string>
    <string name="exercise_desc_sit_up">윗몸일으키기설명입니다.윗몸일으키기설명입니다.윗몸일으키기설명입니다.윗몸일으키기설명입니다.윗몸일으키기설명입니다.윗몸일으키기설명입니다.</string>
    <string name="exercise_desc_plank">플랭크 설명입니다.플랭크 설명입니다.플랭크 설명입니다.플랭크 설명입니다.플랭크 설명입니다.플랭크 설명입니다.플랭크 설명입니다.</string>
    <string name="dont_show_again">Don\'t show\nagain</string>
    <string name="start">Start</string>
    <string name="setting_goals">Setting Goals</string>
    <string name="back_pressed_description">Press BACK again to exit.</string>
    <string name="no_goals">No Goals</string>
    <string name="finish">Finish</string>
    <string name="rest">Rest</string>
    <string name="log">Log</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="time_limit_per_set">Time limit per set</string>
    <string name="time_rest">Time Rest</string>
    <string name="unknown">Unknown</string>
    <string name="unit_set">set</string>
    <string name="unit_count">count</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="sec">sec</string>
    <string name="min">min</string>
    <string name="required_setting_goals">You can\'t set the target to 0 or 00:00</string>
    <string name="unit_rep">rep</string>
    <string name="time_limit">Time Limit</string>
    <string name="end">End</string>
    <string name="auto_end">Auto End</string>
    <string name="exercise">Exercise</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="plus_min_10">+10 min</string>
    <string name="plus_min_1">+1 min</string>
    <string name="plus_sec_10">+10 sec</string>
    <string name="plus_sec_1">+1 sec</string>
    <string name="minus_min_10">-10 min</string>
    <string name="minus_min_1">-1 min</string>
    <string name="minus_sec_10">-10 sec</string>
    <string name="minus_sec_1">-1 sec</string>
    <string name="exercise_end">Quit exercise</string>
    <string name="exercise_end_desc">Do you want to quit the exercise?</string>
    <string name="quit">Quit</string>
    <string name="success">Success</string>
    <string name="time_over">Time Over</string>
    <string name="early_finish">Early Finish</string>
    <string name="manually_finish">--</string>
</resources>