<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.myohoon.hometrainingautocounter.repository.enums.ExerciseType"/>
        <variable
            name="exerciseVM"
            type="com.myohoon.hometrainingautocounter.viewmodel.ExerciseViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/default_drawable_bg"
        tools:context=".view.fragment.main.MainFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="731dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCountTopArea"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/basic_side_margin"
            android:background="@drawable/background_bottom_round_blue_gradient"
            android:elevation="@dimen/basic_side_margin"
            app:layout_constraintBottom_toTopOf="@+id/glTopCountAreaBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linBottomLeft"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/basic_side_margin"
                android:layout_marginTop="276dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/guideline7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvExerciseTitle">

                <TextView
                    android:id="@+id/tvTitleBottomLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|bottom"
                    android:text="TextView"
                    android:textColor="@color/gray_100"
                    android:textSize="@dimen/h5"
                    android:textStyle="bold"
                    tools:text="set" />

                <TextView
                    android:id="@+id/tvCountBottomLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@{exerciseVM.currentSets}"
                    android:textColor="@color/gray_100"
                    android:textSize="@dimen/h3"
                    android:textStyle="bold"
                    tools:text="3" />

                <TextView
                    android:id="@+id/tvGoalsBottomLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foregroundGravity="bottom|center_horizontal"
                    android:gravity="center_horizontal|top"
                    android:text="TextView"
                    android:textColor="@color/gray_100"
                    android:textSize="@dimen/h5"
                    tools:text=" / 5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linBottomRight"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/basic_side_margin"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline8">

                <TextView
                    android:id="@+id/tvTitleBottomRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|bottom"
                    android:text="TextView"
                    android:textColor="@color/gray_100"
                    android:textSize="@dimen/h5"
                    android:textStyle="bold"
                    tools:text="Time limit per set" />

                <TextView
                    android:id="@+id/tvCountBottomRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foregroundGravity="center"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@{exerciseVM.currentTimeLimit}"
                    android:textColor="@color/gray_100"
                    android:textSize="@dimen/h3"
                    android:textStyle="bold"
                    tools:text="00:00" />

                <TextView
                    android:id="@+id/tvGoalsBottomRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foregroundGravity="bottom|center_horizontal"
                    android:gravity="center_horizontal|top"
                    android:text="TextView"
                    android:textColor="@color/gray_100"
                    android:textSize="@dimen/h5"
                    tools:text=" / 20:00" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linMainCounter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline7">

                <TextView
                    android:id="@+id/tvTitleCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center_horizontal|top"
                    android:text="TextView"
                    android:textColor="@color/gray_100"
                    android:textSize="@dimen/h3"
                    tools:text="Reps" />

                <TextView
                    android:id="@+id/tvCountCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foregroundGravity="center"
                    android:gravity="bottom|center_horizontal"
                    android:text="@{exerciseVM.currentExercise.EId == ExerciseType.PLANK.ordinal() ? exerciseVM.currentTimeLimit : exerciseVM.currentReps}"
                    android:textColor="@color/gray_100"
                    android:textSize="@dimen/h0"
                    android:textStyle="bold"
                    tools:text="10000" />

                <TextView
                    android:id="@+id/tvGoalsCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foregroundGravity="bottom|center_horizontal"
                    android:gravity="center_horizontal|top"
                    android:text="TextView"
                    android:textColor="@color/gray_100"
                    android:textSize="@dimen/h3"
                    tools:text=" / 2000" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvExerciseTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_side_margin"
                android:gravity="center|left"
                android:textColor="@color/gray_100"
                android:textSize="@dimen/h3"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/ibAlarm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Chin Up / Pull Up" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="386dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="411dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.33"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="411dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.66"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/ibAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/basic_side_margin"
                android:layout_marginRight="@dimen/basic_side_margin"
                android:background="@null"
                android:padding="@dimen/icon_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_notifications_active_24"
                app:tint="@color/gray_100" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glTopCountAreaBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="411dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.7"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBottomBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_side_margin"
                android:text="@string/finish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnRest"
                style="@style/ButtonTheme2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_side_margin"
                android:text="@string/rest"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="715dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvCountLog"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/clBottomBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLog" />

        <TextView
            android:id="@+id/tvLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/basic_side_margin"
            android:text="@string/log"
            android:textSize="@dimen/h5"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/glTopCountAreaBottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
